# equinox-model-zoo

./: .pre-commit-config.yaml  pyproject.toml
models/: siren.py
