[project]
name = "equinox-model-zoo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beartype>=0.20.0",
    "equinox>=0.11.12",
    "jaxtyping>=0.2.38",
    "pre-commit>=4.1.0",
    "ruff>=0.11.0",
]

[tool.ruff.lint]
ignore = ["F722"]